<resources>
    <string name="app_name">Notepad</string>

    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login_error">Wrong username and password</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact Us</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="web">Website</string>
    <string name="add_note">Add New Note</string>
    <string name="show">Show All Notes</string>
    <string name="settings">Settings</string>
    <string name="privacy">Privacy policy</string>
    <string name="open">open</string>
    <string name="close">clos</string>
    <string name="rate">Rate</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_note_success">Added Note Successfully</string>
    <string name="add_note_error">Error In Adding New Note</string>


</resources>